# BambooForest

./: .gitignore  2026-06-24_BambooForest_BREAKDOWN.md  2026-06-24_BambooForest_HANDOFF.md  2026-06-24_BambooForest_PROOF.md  2026-06-24_BambooForest_README.md  2026-06-24_BambooForest_TUTORIAL.md  ACTIVE_BUGS.md  BIOME_LEVEL_DESIGN_BUGS_REPORT.md  BREAKDOWN.md  Bamboo_Forest.desktop  CLAUDE.md  CNAME  EDGE_CASE_BUGS_REPORT.md  HANDOFF.md  MASTER_GLITCH_REPORT.md  PHYSICS_BUGS_REPORT.md  PROOF.md  README.md  SWARM_COMPLETE_2026-06-24.md  TUTORIAL.md  VISUAL_BUGS_REPORT.md  WEB_PARITY_BUGS_REPORT.md  audio.py  backgrounds.py  bamboo_forest.py  biomes.py  config.py  engine.py  fix_verify_order.py  game.py  highscores.json.bak_verify  index.html  levels.py  module_auto.py  pyproject.toml  save.py  sprites.py  sync_check_bf.py  ui.py  web.apk
.claude/: hot_files.md  manifest.jsonl  source_snapshot.json
.claude/memory/: project_conventions.md  reference_architecture.md  reference_patterns.md  reference_utilities.md
.claude/snippets/: INDEX.md
.github/workflows/: deploy.yml
Bamboo_Game/: bamboo_app.py
ROLEYOUAREGAME_1086/Iteration_1/: 4_Final.txt
ROLEYOUAREGAME_1086/Iteration_13/: 1_Plan.txt  3_Audit.txt
ROLEYOUAREGAME_1086/Iteration_14/: 0.5_Route.txt  1_Plan.txt  2_Draft.txt  (+1 more)
site/: index.html  styles.css
tests/: README.md  test_game_logic.py  test_player.py  test_smoke.py  verify.py
web/: README.md  audio.py  backgrounds.py  biomes.py  brand_loader.py  config.py  engine.py  game.py  levels.py  main.py  save.py  sprites.py  touch_overlay.html  ui.py
(+303 files in other folders)
