[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bamboo-forest"
version = "0.1.0"
description = "A 2D platformer adventure with a panda in magical bamboo forests and varied biomes."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
  {name = "User (designer)", email = "user@example.com"}
]
dependencies = [
    "pygame>=2.5.0",
]

[project.scripts]
bamboo-forest = "game:main"

[tool.setuptools]
packages = ["."]

[tool.uv]
dev-dependencies = []